// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariantManagement Render without crashing - disabled 1`] = `
<DocumentFragment>
  <div
    class="VariantManagement-container VariantManagement-disabled"
  >
    <ui5-title
      class="VariantManagement-title"
      level="H4"
      ui5-title=""
    >
      Variant 1
    </ui5-title>
    <ui5-button
      design="Transparent"
      disabled="true"
      icon="navigation-down-arrow"
      ui5-button=""
    />
  </div>
</DocumentFragment>
`;

exports[`VariantManagement Render without crashing 1`] = `
<DocumentFragment>
  <div
    class="VariantManagement-container"
  >
    <ui5-title
      class="VariantManagement-title"
      level="H4"
      ui5-title=""
    >
      Variant 1
    </ui5-title>
    <ui5-button
      design="Transparent"
      icon="navigation-down-arrow"
      ui5-button=""
    />
  </div>
</DocumentFragment>
`;

exports[`VariantManagement With suggestions 1`] = `
<DocumentFragment>
  <div
    class="VariantManagement-container"
  >
    <ui5-title
      class="VariantManagement-title"
      level="H4"
    >
      Variant 1
    </ui5-title>
    <ui5-button
      design="Transparent"
      icon="navigation-down-arrow"
    />
  </div>
</DocumentFragment>
`;
